--- a/power-switch.vcxproj.filters
+++ b/power-switch.vcxproj.filters
@@ -6,7 +6,7 @@
   <ItemGroup>
     <ClInclude Include="case_insensitive.h" />
     <ClInclude Include="config.h" />
-    <ClInclude Include="config-tempalte.h" />
+    <ClInclude Include="config-template.h" />
     <ClInclude Include="http_status_error_category.h" />
     <ClInclude Include="pdu_types.h" />
   </ItemGroup>
