Added more error messace for HTTP status codes >= 412

--- a/power-switch.xcodeproj/xcshareddata/xcschemes/power-switch.xcscheme
+++ b/power-switch.xcodeproj/xcshareddata/xcschemes/power-switch.xcscheme
@@ -53,8 +53,12 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "on ch1"
+            argument = "off all"
             isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "on ch1"
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
